<resources>
    <string name="app_name">Thirty</string>
    <string name="dice1">dice1</string>
    <string name="dice2">dice2</string>
    <string name="dice3">dice3</string>
    <string name="dice4">dice4</string>
    <string name="dice5">dice5</string>
    <string name="dice6">dice6</string>

    <!--spinner items-->
    <string-array name="choices">
        <item>Välj poängtyp</item>
        <item>Low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <!--Spel termer-->
    <string name="numberOfRounds">Runda: </string>
    <string name="numberOfThrows">Kast: </string>
    <string name="takePoints">Ta poäng</string>

    <!-- Resultat Fragment-->
    <string name="throwDice">Kasta</string>
    <string name="game_score">Spelets slutresultat</string>
    <string name="choice">Val</string>
    <string name="score">Poäng</string>
    <string name="totalScore">Total poäng</string>

    <!-- Feedback Fragment -->
    <string name="succeededTitle">Tagna poäng: </string>
    <string name="succeededMessage">Kasta för att börja nästa runda</string>
    <string name="gameOverMessage">Spelet är slut</string>
    <string name="failedTitle">Ingen tärning vald!</string>
    <string name="failedMessage">Du måste välja en tärning/tärningar </string>
    <string name="playAgain">Spela igen</string>

</resources>